--- a/app/src/main/res/layout/memberheading.xml
+++ b/app/src/main/res/layout/memberheading.xml
@@ -1,33 +1,216 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollbars="vertical">
-    <LinearLayout android:id="@+id/secListRow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal"  android:background="#C2E0EC" android:paddingTop="8px" android:paddingBottom="5px">
-        <TextView android:text="Vill" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="gone" />
-        <TextView android:text="Bari" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="gone" />
-        <TextView android:text="HH" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="gone" />
-        <TextView android:text="" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="visible" />
-        <TextView android:text="সিরিয়াল" android:layout_width="80dp" android:layout_marginLeft="50sp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="নাম" android:layout_width="190sp" android:gravity="left" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="স্থায়ী নাম্বার" android:layout_width="170dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="সম্পর্ক" android:layout_width="70dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="লিঙ্গ" android:layout_width="70dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="জন্ম তারিখ" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="বয়স(Y)" android:layout_width="80dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="মায়ের সিরিয়াল" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="বাবার সিরিয়াল" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="সর্বোচ্চ শ্রেণি পাশ" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text=" বৈবাহিক অবস্থা" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text=" গর্ভের অবস্থা" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="LMP Date" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text=" পেশা" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="স্বামী/স্ত্রীর সিরিয়াল 1" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="স্বামী/স্ত্রীর সিরিয়াল 2" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="স্বামী/স্ত্রীর সিরিয়াল 3" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="স্বামী/স্ত্রীর সিরিয়াল 4" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="EnType" android:layout_width="60dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="visible"  android:textSize="16sp"/>
-        <TextView android:text="EnDate" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="visible" android:textSize="16sp"/>
-        <TextView android:text="ExType" android:layout_width="60dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="visible" android:textSize="16sp"/>
-        <TextView android:text="ExDate" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="visible" android:textSize="16sp"/>
-        <TextView android:text="Pos.Mig" android:layout_width="60dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="visible"  android:textSize="16sp"/>
-        <TextView android:text="Mig.Date" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="visible" android:textSize="16sp"/>
+
+    <LinearLayout
+        android:id="@+id/secListRow"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#C2E0EC"
+        android:orientation="horizontal"
+        android:paddingBottom="5px"
+        android:paddingTop="8px">
+
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Vill"
+            android:visibility="gone" />
+
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Bari"
+            android:visibility="gone" />
+
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="HH"
+            android:visibility="gone" />
+
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text=""
+            android:visibility="visible" />
+
+        <TextView
+            android:layout_width="85dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50sp"
+            android:gravity="center"
+            android:text="সিরিয়াল"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="190sp"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:text="নাম"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="175dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="স্থায়ী নাম্বার"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="সম্পর্ক"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="লিঙ্গ"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="জন্ম তারিখ"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="বয়স(Y)"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="মায়ের সিরিয়াল"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="বাবার সিরিয়াল"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="সর্বোচ্চ শ্রেণি পাশ"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text=" বৈবাহিক অবস্থা"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text=" গর্ভের অবস্থা"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="LMP Date"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text=" পেশা"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="স্বামী/স্ত্রীর সিরিয়াল 1"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="স্বামী/স্ত্রীর সিরিয়াল 2"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="স্বামী/স্ত্রীর সিরিয়াল 3"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="স্বামী/স্ত্রীর সিরিয়াল 4"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="EnType"
+            android:textSize="16sp"
+            android:visibility="visible" />
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="EnDate"
+            android:textSize="16sp"
+            android:visibility="visible" />
+
+        <TextView
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="ExType"
+            android:textSize="16sp"
+            android:visibility="visible" />
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="ExDate"
+            android:textSize="16sp"
+            android:visibility="visible" />
+
+        <TextView
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Pos.Mig"
+            android:textSize="16sp"
+            android:visibility="visible" />
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Mig.Date"
+            android:textSize="16sp"
+            android:visibility="visible" />
     </LinearLayout>
- </LinearLayout>
+</LinearLayout>
