--- a/app/src/main/res/layout/member.xml
+++ b/app/src/main/res/layout/member.xml
@@ -188,9 +188,7 @@
         <LinearLayout android:layout_width="fill_parent" android:background="#006699" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
             <TextView android:text="" android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp"  />
             <TextView android:text="ডেটা আবার পর্যালোচনা করা প্রয়োজন" android:textColor="#FFFFFF" android:layout_width="300sp" android:layout_height="wrap_content" android:textSize="20sp" />
-            <CheckBox android:id="@+id/chkNeedReview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:text="" android:background="#FFFFFF" />
+            <CheckBox android:id="@+id/chkNeedReview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:background="#FFFFFF" />
         </LinearLayout>
 
     <View android:id="@+id/lineExDate" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" android:visibility="gone" />
