--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -34,11 +34,15 @@
             android:textSize="20sp" />
     </LinearLayout>
 
-    <LinearLayout android:layout_marginLeft="50sp" android:layout_marginRight="50sp" android:layout_marginTop="0sp" android:layout_marginBottom="20sp" android:layout_width="fill_parent"  android:layout_height="wrap_content" android:layout_gravity="center">
+    <LinearLayout android:orientation="vertical" android:layout_marginLeft="50sp" android:layout_marginRight="50sp" android:layout_marginTop="0sp" android:layout_marginBottom="20sp" android:layout_width="fill_parent"  android:layout_height="wrap_content" android:layout_gravity="center">
         <TextView
             android:id="@+id/UniqueUserId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:gravity="center_horizontal|center_vertical" android:textColor="#006699"/>
+        <TextView
+            android:id="@+id/lblQA" android:text="QA Interview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:textSize="25dp" android:gravity="center_horizontal|center_vertical" android:textColor="#ff0000"/>
 
     </LinearLayout>
 
