--- a/app/src/main/res/layout/member_row.xml
+++ b/app/src/main/res/layout/member_row.xml
@@ -13,7 +13,7 @@
             android:id="@+id/review"
             android:layout_width="25sp"
             android:layout_height="45sp"
-            android:background="#2902ff"
+            android:background="#FF006699"
             android:src="@drawable/review"
             android:visibility="invisible" />
 
