--- a/app/src/main/res/layout/eventlistpopup.xml
+++ b/app/src/main/res/layout/eventlistpopup.xml
@@ -36,7 +36,7 @@
 					<HorizontalScrollView  
 		         		android:id="@android:id/tabcontent"
 		         		android:layout_height="fill_parent"
-		         		android:layout_width="fill_parent">
+		         		android:layout_width="match_parent">
 					    	
 					<ListView
 				        android:id="@+id/lstEvent"
