--- a/app/src/main/res/layout/eventlistrow.xml
+++ b/app/src/main/res/layout/eventlistrow.xml
@@ -1,9 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/rowlay" xmlns:android="http://schemas.android.com/apk/res/android"
- android:orientation="vertical" android:layout_width="fill_parent"
- android:layout_height="fill_parent" android:paddingTop="5sp" android:paddingBottom="5sp"
- android:background="#FFFFFF">
-    		<TableLayout
+<LinearLayout android:id="@+id/rowlay" xmlns:android="http://schemas.android.com/apk/res/android"
+ android:orientation="horizontal" android:layout_width="fill_parent"
+ android:layout_height="wrap_content" android:paddingTop="5sp" android:paddingBottom="5sp"
+ android:background="#FFFFFF" android:gravity="center_vertical">
+	<LinearLayout
+		android:layout_width="60sp"
+		android:layout_height="wrap_content">
+	<Button android:id="@+id/cmdEvListDel" android:layout_column="0"
+		android:layout_width="60sp"  android:textSize="14sp"
+		android:layout_height="wrap_content"
+		android:text="del"/>
+	</LinearLayout>
+	<LinearLayout
+		android:layout_width="60sp"
+		android:layout_height="wrap_content">
+	<Button android:id="@+id/cmdEvListEdit" android:layout_column="1"
+		android:layout_width="60sp"  android:textSize="14sp"
+		android:layout_height="wrap_content"
+		android:text="edit"/>
+	</LinearLayout>
+	<LinearLayout
+		android:layout_width="60sp"
+		android:layout_height="wrap_content">
+	<TextView android:id="@+id/e_MslNo" android:layout_column="2"
+		android:text="MSlNo"
+		android:textSize="18sp" android:gravity="center"
+		android:layout_width="60sp"
+		android:layout_height="30sp"/>
+	</LinearLayout>
+	<LinearLayout
+		android:layout_width="70sp"
+		android:layout_height="wrap_content">
+	<TextView android:id="@+id/e_evtype" android:layout_column="3"
+		android:text="Code"
+		android:layout_width="70sp" android:textSize="18sp"
+		android:gravity="center"
+		android:layout_height="30sp"/>
+	</LinearLayout>
+	<LinearLayout
+		android:layout_width="120sp"
+		android:layout_height="wrap_content">
+	<TextView android:id="@+id/e_evdate" android:layout_column="4"
+		android:text="Date"
+		android:layout_width="120sp" android:textSize="18sp"
+		android:gravity="center"
+		android:layout_height="30sp"/>
+	</LinearLayout>
+	<LinearLayout
+		android:layout_width="100sp"
+		android:layout_height="wrap_content">
+	<TextView android:id="@+id/e_info1" android:layout_column="5"
+		android:text="Info-1"
+		android:layout_width="100sp" android:textSize="18sp"
+		android:gravity="center"
+		android:layout_height="30sp"/>
+	</LinearLayout>
+	<LinearLayout
+		android:layout_width="70sp"
+		android:layout_height="wrap_content">
+	<TextView android:id="@+id/e_info2" android:layout_column="6"
+		android:text="Info-2"
+		android:layout_width="70sp" android:textSize="18sp"
+		android:gravity="center"
+		android:layout_height="30sp"/>
+	</LinearLayout>
+	<LinearLayout
+		android:layout_width="70sp"
+		android:layout_height="wrap_content">
+	<TextView android:id="@+id/e_info3" android:layout_column="7"
+		android:text="Info-3"
+		android:layout_width="70sp" android:textSize="18sp"
+		android:gravity="center"
+		android:layout_height="30sp"/>
+	</LinearLayout>
+	<LinearLayout
+		android:layout_width="120sp"
+		android:layout_height="wrap_content">
+	<TextView android:id="@+id/e_info4" android:layout_column="8"
+		android:text="Info-4"
+		android:layout_width="120sp" android:textSize="18sp"
+		android:gravity="center"
+		android:layout_height="30sp"/>
+	</LinearLayout>
+	<LinearLayout
+		android:layout_width="70sp"
+		android:layout_height="wrap_content">
+	<TextView android:id="@+id/e_round" android:layout_column="9"
+		android:layout_width="70sp" android:textSize="18sp"
+		android:gravity="center"
+		android:layout_height="30sp"/>
+	</LinearLayout>
+	<!--
+	<TableLayout
 				android:id="@+id/eventlisttab"
 				android:layout_width="fill_parent"
 				android:layout_height="fill_parent" android:layout_marginRight="10sp"
@@ -59,6 +147,6 @@
 				         android:gravity="center"
 				         android:layout_height="30sp"/>	 				    				         
 				</TableRow>
-		</TableLayout>  						
- </RelativeLayout>
+		</TableLayout>  	-->
+ </LinearLayout>
  
